# src/controllers/bundle.controller.ts
@@ -1,11 +1,14 @@
 import { NextFunction, Request, Response, Router } from 'express';
+import bundler from '@asyncapi/bundler';
+
+import { validationMiddleware } from '../middlewares/validation.middleware';
+
 import { ProblemException } from '../exceptions/problem.exception';
 import { Controller } from '../interfaces';
-import bundler from '@asyncapi/bundler';
-import { documentValidationMiddleware } from '../middlewares/document-validation.middleware';
 
-export class BundlerController implements Controller {
+export class BundleController implements Controller {
   public basepath = '/bundle';
+
   private async bundle(req: Request, res: Response, next: NextFunction) {
     const asyncapis: Array<string> = req.body.asyncapis;
     const base = req.body.base;
@@ -24,9 +27,19 @@ export class BundlerController implements Controller {
     }
   }
 
-  public boot(): Router {
+  public async boot(): Promise<Router> {
     const router = Router();
-    router.post(`${this.basepath}`, documentValidationMiddleware, this.bundle.bind(this));
+
+    router.post(
+      this.basepath,
+      await validationMiddleware({ 
+        path: this.basepath, 
+        method: 'post',
+        documents: ['asyncapis', 'base'],
+      }),
+      this.bundle.bind(this)
+    );
+
     return router;
   }
 }
